--- a/misc/services/mobile-webui/mobile-webui-frontend/src/assets/index.scss
+++ b/misc/services/mobile-webui/mobile-webui-frontend/src/assets/index.scss
@@ -1,5 +1,6 @@
 @import 'bulma/bulma.sass';
 @import './variables.scss';
+@import './application.scss';
 @import './fonts.scss';
 @import './header.scss';
 @import './buttons.scss';
