--- a/frontend/src/assets/css/inputs.css
+++ b/frontend/src/assets/css/inputs.css
@@ -802,6 +802,10 @@ input[type=checkbox]:disabled, input[type=radio]:disabled {
     padding: 0;
     flex: 1;
 
+    :first-child {
+        width: 100%;
+    }
+
     &.input-icon {
         flex: 0.05;
         justify-content: flex-end;
