#12114  Fix display logic

--- a/backend/de.metas.fresh/de.metas.fresh.base/src/main/jasperreports/de/metas/docs/sales/invoice/report_details_v2.jrxml
+++ b/backend/de.metas.fresh/de.metas.fresh.base/src/main/jasperreports/de/metas/docs/sales/invoice/report_details_v2.jrxml
@@ -360,7 +360,7 @@ $F{shiplocation}]]></textFieldExpression>
 				</textField>
 			</band>
 			<band height="12">
-				<printWhenExpression><![CDATA[$F{ishu}.equals("Y") && $F{isprintwhenpackingmaterial}.equals("Y")]]></printWhenExpression>
+				<printWhenExpression><![CDATA[$F{ishu} && $F{isprintwhenpackingmaterial}.equals("Y")]]></printWhenExpression>
 				<textField>
 					<reportElement key="textField-19" x="426" y="0" width="40" height="12" forecolor="#000000" uuid="abf845aa-feb5-4936-9920-5f767128c6e3"/>
 					<textElement textAlignment="Right" markup="none">
@@ -714,7 +714,7 @@ $F{shiplocation}]]></textFieldExpression>
 			</textField>
 		</band>
 		<band height="12">
-			<printWhenExpression><![CDATA[$F{ishu}.equals("Y") && $F{isprintwhenpackingmaterial}.equals("Y")]]></printWhenExpression>
+			<printWhenExpression><![CDATA[$F{ishu} && $F{isprintwhenpackingmaterial}.equals("Y")]]></printWhenExpression>
 			<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
 				<reportElement key="textField-24" mode="Transparent" x="37" y="0" width="143" height="12" forecolor="#000000" backcolor="#FFFFFF" uuid="097beb53-5e78-4dd1-9c25-efb41d796b05"/>
 				<box rightPadding="3">
