--- a/frontend/src/assets/css/inputs.css
+++ b/frontend/src/assets/css/inputs.css
@@ -586,6 +586,10 @@ input:checked + .input-slider:before {
 
         .input-icon {
             bottom: -1px;
+            >.meta-icon-close-alt, .meta-icon-down-1 {
+              font-size:20px;
+              padding-right: 1px;
+           }
         }
     }
     &.lookup-dropdown {
@@ -771,6 +775,7 @@ input[type=checkbox]:disabled, input[type=radio]:disabled {
     padding: 0;
     padding-right: .5rem;
     justify-content: space-between;
+    padding-right: 3px;
 
     .input-dropdown-container {
         position: static;
@@ -816,8 +821,10 @@ input[type=checkbox]:disabled, input[type=radio]:disabled {
             top: -3px;
         }
 
-        .meta-icon-preview {
+        .meta-icon-close-alt, .meta-icon-preview {
             cursor: default;
+            font-size: 20px;
+            width: 25px;
         }
     }
 
@@ -860,7 +867,7 @@ input[type=checkbox]:disabled, input[type=radio]:disabled {
 }
 
 .lookup-tooltip {
-    flex: 0.05;
+    flex: 0.02;
     justify-content: flex-end;
     pointer-events: initial;
 }
