--- a/frontend/src/assets/css/table.css
+++ b/frontend/src/assets/css/table.css
@@ -621,6 +621,17 @@
     justify-content: space-between;
     align-items: center;
 }
+.spinner-wrapper-in-tab {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 200px;
+
+  div {
+      text-align: center;
+  }
+}
+
 
 @media only screen and (min-width: $breakpoint-md){
     .desktop {
