Render attachment spinner

--- a/frontend/src/assets/css/attachments.css
+++ b/frontend/src/assets/css/attachments.css
@@ -115,3 +115,9 @@
     cursor: pointer;
     color: $brand-super-light-color;
 }
+
+.side-attachment-wrapper {
+    >.screen-freeze {
+        height: 15%;
+    }
+}
