Add spinner also for the DocumentReferences

--- a/frontend/src/assets/css/attachments.css
+++ b/frontend/src/assets/css/attachments.css
@@ -116,7 +116,7 @@
     color: $brand-super-light-color;
 }
 
-.side-attachment-wrapper {
+.side-attachment-wrapper, .docref-spinner-wrapper {
     >.screen-freeze {
         height: 15%;
     }
