Menu spinner logic

--- a/frontend/src/assets/css/overlayfield.css
+++ b/frontend/src/assets/css/overlayfield.css
@@ -100,3 +100,15 @@
         padding: 20px;
     }
 }
+
+.menu-overlay-spinner {
+  >.spinner {
+      background-color: transparent;
+  }
+  >.screen-freeze {
+      top: 0px;
+      left: 280px;
+      width: 43%;
+      height: 30%;
+  }
+}
