--- a/frontend/src/assets/css/styles.css
+++ b/frontend/src/assets/css/styles.css
@@ -17,6 +17,7 @@
 @import './notification.css';
 @import './panel.css';
 @import './overlayfield.css';
+@import './sitemap.css';
 @import './table.css';
 @import './tabs.css';
 @import './tag.css';
