--- a/frontend/src/assets/css/table.css
+++ b/frontend/src/assets/css/table.css
@@ -626,6 +626,7 @@
   justify-content: center;
   align-items: center;
   min-height: 100px;
+  height: 150px;
 
   div {
       text-align: center;
