--- a/misc/services/mobile-webui/mobile-webui-frontend/src/assets/index.scss
+++ b/misc/services/mobile-webui/mobile-webui-frontend/src/assets/index.scss
@@ -3,6 +3,7 @@
 @import './application.scss';
 @import './fonts.scss';
 @import './header.scss';
+@import './view-header.scss';
 @import './buttons.scss';
 @import './launchers.scss';
 @import './code-scanner.scss';
@@ -11,5 +12,19 @@
 
 * {
   box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  monospace;
 }
 
