--- a/misc/services/mobile-webui/mobile-webui-frontend/src/assets/view-header.scss
+++ b/misc/services/mobile-webui/mobile-webui-frontend/src/assets/view-header.scss
@@ -1,42 +1,19 @@
-.header-caption {
-  margin: 0;
-  border-bottom: 1px solid hsl(0, 0%, 86%);
+.view-header {
+  width: 100%;
 
-  .px-6 {
-    padding-left: 2rem !important;
-  }
+  tbody {
+    tr {
+      th {
+        white-space: nowrap;
+        max-width: 40vw !important;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
 
-  .px-7 {
-    padding-left: 2.5rem !important;
-    padding-right: 2.5rem !important;
-  }
-
-  .px-8 {
-    padding-left: 3rem !important;
-    padding-right: 3rem !important;
-  }
-
-  .picking-step-details {
-    border-bottom: 1px solid hsl(0, 0%, 80%);
-  }
-
-  .header_info_0 {
-    background-color: lighten($header-green-one, 15%);
-  }
-
-  .header_info_1 {
-    background-color: lighten($header-green-one, 22.5%);
-  }
-
-  .header_info_2 {
-    background-color: lighten($header-green-one, 32.5%);
-  }
-
-  .header_info_3 {
-    background-color: lighten($header-green-one, 37.5%);
-  }
-
-  .header_info_4 {
-    background-color: lighten($header-green-one, 42.5%);
+      td {
+        text-align: right;
+        white-space: pre-wrap;
+      }
+    }
   }
 }
