--- a/misc/services/mobile-webui/mobile-webui-frontend/src/assets/pick-products.scss
+++ b/misc/services/mobile-webui/mobile-webui-frontend/src/assets/pick-products.scss
@@ -1,5 +1,5 @@
 .pick-products-container {
-  padding: 0rem;
+  padding: 0;
 }
 
 .pick-products-activity-container {
@@ -11,10 +11,10 @@
     margin-top: 0.4rem;
     border: 1px solid $base-mf-green;
     border-radius: 5px;
-    box-shadow: 0 4px 8px 0px $grey-light;
-    transition: ".2s transform linear, .2s box-shadow linear !important";
+    box-shadow: 0 4px 8px 0 $grey-light;
+    transition: .2s transform linear, .2s box-shadow linear !important;
     .no-p {
-      padding: 0px;
+      padding: 0;
     }
     .green-check {
       color: $base-elements;
@@ -22,10 +22,8 @@
   }
   .pick-product:hover {
     background: $base-elements;
-    box-shadow: 0 4px 8px 0px $base-elements;
+    box-shadow: 0 4px 8px 0 $base-elements;
   }
-
-.picking-step-container {}
 
 .picking-row-info {
   width: 100%;
@@ -63,7 +61,7 @@
   color: white;
   background-color: $base-mf-green;
   font-weight: 400;
-  border: 0px;
+  border: 0;
   padding: 5px;
   border-radius: 5px;
   cursor: pointer;
