--- a/misc/services/mobile-webui/mobile-webui-frontend/src/assets/buttons.scss
+++ b/misc/services/mobile-webui/mobile-webui-frontend/src/assets/buttons.scss
@@ -22,12 +22,12 @@
     color: white;
     background-color: $custom-dk-green;
     font-weight: 400;
-    border: 0px;
+    border: 0;
 }
 .logout-btn-green:hover {
     color: white;
     background-color: $custom-dk-green;
-    border: 0px;
+    border: 0;
 }
 .logout-btn-green:focus {
     color: white;
@@ -65,7 +65,7 @@
     border-radius: 7px;
     background-color: $indicator-red;
     border-color: $indicator-red-border;
-    box-shadow: 0px 0px 4px 1px $indicator-red;
+    box-shadow: 0 0 4px 1px $indicator-red;
     margin-bottom: 5px;
 }
 
@@ -78,7 +78,7 @@
     border-radius: 7px;
     background-color: $indicator-green;
     border-color: $indicator-green-border;
-    box-shadow: 0px 0px 4px 1px $indicator-green;
+    box-shadow: 0 0 4px 1px $indicator-green;
     margin-bottom: 5px;
 }
 
@@ -91,10 +91,18 @@
     border-radius: 7px;
     background-color: $indicator-yellow;
     border-color: $indicator-yellow-border;
-    box-shadow: 0px 0px 4px 1px $indicator-yellow;
+    box-shadow: 0 0 4px 1px $indicator-yellow;
     margin-bottom: 5px;
 }
 
 .warning-sign {
     color: $indicator-yellow;
+}
+
+.complete-btn {
+    width: 100%;
+    font-size: 1.5rem;
+    //border: 1px solid $base-mf-green;
+    //border-radius: 5px;
+    //box-shadow: 0 4px 8px 0px $grey-light;
 }
