--- a/misc/services/mobile-webui/mobile-webui-frontend/src/assets/application.scss
+++ b/misc/services/mobile-webui/mobile-webui-frontend/src/assets/application.scss
@@ -18,6 +18,12 @@
         vertical-align: middle;
       }
     }
+
+    .app-caption {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
   }
 
   .app-content {
