QA, cleanup, fixes

--- a/misc/services/mobile-webui/mobile-webui-frontend/src/assets/index.scss
+++ b/misc/services/mobile-webui/mobile-webui-frontend/src/assets/index.scss
@@ -9,6 +9,7 @@
 @import './code-scanner.scss';
 @import './confirm-button.scss';
 @import './pick-products.scss';
+@import './get-qty-dialog.scss';
 
 * {
   box-sizing: border-box;
