Move the overlay outside the table wrapper

--- a/frontend/src/assets/css/table.css
+++ b/frontend/src/assets/css/table.css
@@ -622,6 +622,8 @@
     align-items: center;
 }
 .spinner-wrapper-in-tab {
+  position: absolute;
+  width: 99%;
   display: flex;
   justify-content: center;
   align-items: center;
