Adapts for the search items

--- a/frontend/src/assets/css/header.css
+++ b/frontend/src/assets/css/header.css
@@ -653,6 +653,11 @@
 }
 
 .menu-overlay-search-item-focused {
-    text-decoration: underline;
     text-underline-position: under;
+    span.query-menu-item {
+        text-decoration: underline;
+    }
+    span.query-menu-item:hover {
+      text-decoration: none;
+    }
 }
