Fixes to do the left arrangement

--- a/frontend/src/assets/css/indicator.css
+++ b/frontend/src/assets/css/indicator.css
@@ -42,6 +42,7 @@
     max-width: 380px;
     min-width: 230px;
     margin-bottom: 10px;
+    box-sizing: border-box;
 }
 
 .indicator-draggable {
@@ -56,6 +57,10 @@
     clear: both;
     padding-top: 0;
     margin-top: -0.3rem;
+}
+
+.indicator-card {
+    max-width: 380px;
 }
 
 .indicator-amount {
@@ -131,7 +136,7 @@
 @media screen and (max-width: 901px) {
     .indicator {
         border-right: 1px solid $brand-border-color;
-        width: calc(50% - 1rem);
+        width: calc(100% - 1rem);
         margin: .5rem;
         display: inline-block;
         text-align: center;
