--- a/backend/de.metas.fresh/de.metas.fresh.base/src/main/jasperreports/de/metas/docs/label/QR_Label.jrxml
+++ b/backend/de.metas.fresh/de.metas.fresh.base/src/main/jasperreports/de/metas/docs/label/QR_Label.jrxml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.5.1.final using JasperReports Library version 6.5.1  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="QR Label" printOrder="Horizontal" pageWidth="226" pageHeight="136" columnWidth="216" leftMargin="5" rightMargin="5" topMargin="5" bottomMargin="5" uuid="d77f60d8-3ca8-42d0-9ca2-d19df969e682">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="QR Label" printOrder="Horizontal" pageWidth="339" pageHeight="272" columnWidth="329" leftMargin="5" rightMargin="5" topMargin="5" bottomMargin="5" uuid="d77f60d8-3ca8-42d0-9ca2-d19df969e682">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="jasperreports\json.xml"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<property name="com.jaspersoft.studio.unit." value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.pageHeight" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.pageWidth" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.topMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.bottomMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.leftMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.rightMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
 	<queryString language="JSON">
 		<![CDATA[qrCodes]]>
 	</queryString>
@@ -20,23 +28,23 @@
 		<fieldDescription><![CDATA[qrCode]]></fieldDescription>
 	</field>
 	<detail>
-		<band height="126" splitType="Stretch">
+		<band height="262" splitType="Stretch">
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement x="0" y="0" width="220" height="12" uuid="45f2e222-5d14-426b-a184-8005e447ea69"/>
+				<reportElement x="0" y="0" width="329" height="12" uuid="45f2e222-5d14-426b-a184-8005e447ea69"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
 					<font fontName="Arial" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{topText}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement positionType="FixRelativeToBottom" x="0" y="109" width="220" height="12" uuid="b2642765-1637-464a-b6b7-936576bc02e9"/>
+				<reportElement positionType="Float" x="-5" y="250" width="329" height="12" uuid="b2642765-1637-464a-b6b7-936576bc02e9"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
 					<font fontName="Arial" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{bottomText}]]></textFieldExpression>
 			</textField>
 			<componentElement>
-				<reportElement x="63" y="22" width="90" height="82" uuid="7a3b73d2-4e9f-49b7-9329-688d844ad3d5">
+				<reportElement positionType="Float" x="65" y="37" width="199" height="189" uuid="7a3b73d2-4e9f-49b7-9329-688d844ad3d5">
 					<property name="com.jaspersoft.studio.unit.margin" value="mm"/>
 				</reportElement>
 				<jr:QRCode xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd" margin="0" errorCorrectionLevel="M">
