mobile UI: fix colors

--- a/misc/services/mobile-webui/mobile-webui-frontend/src/assets/login.scss
+++ b/misc/services/mobile-webui/mobile-webui-frontend/src/assets/login.scss
@@ -5,4 +5,16 @@
     overflow: hidden;
     text-overflow: ellipsis;
   }
+
+  .button {
+    background-color: $base-mf-green;
+    color: white;
+
+    &[disabled] {
+      background-color: $base-mf-green;
+      border-color: transparent;
+      box-shadow: none;
+    }
+  }
+
 }
