--- a/misc/services/mobile-webui/mobile-webui-frontend/src/assets/application.scss
+++ b/misc/services/mobile-webui/mobile-webui-frontend/src/assets/application.scss
@@ -8,7 +8,7 @@
     padding: 0.50rem;
     box-shadow: rgba(0, 0, 0, 0.133) 0 0.15em 0.35em 0;
 
-    color: $white-background;
+    color: $white;
     background: $base-mf-green;
 
     .app-icon {
@@ -39,7 +39,7 @@
 
     box-shadow: rgba(0, 0, 0, 0.133) 0 -0.15em 0.35em 0;
 
-    background: $white-background;
+    background: $white;
 
     .columns {
       margin: 0;
