--- a/misc/services/mobile-webui/mobile-webui-frontend/src/assets/index.scss
+++ b/misc/services/mobile-webui/mobile-webui-frontend/src/assets/index.scss
@@ -1,5 +1,5 @@
-@import 'bulma/bulma.sass';
 @import './variables.scss';
+@import 'bulma/bulma.sass';
 @import './login.scss';
 @import './application.scss';
 @import './fonts.scss';
@@ -7,7 +7,7 @@
 @import './buttons.scss';
 @import './launchers.scss';
 @import './code-scanner.scss';
-@import './confirm-button.scss';
+@import './prompt-dialog.scss';
 @import './pick-products.scss';
 @import './get-qty-dialog.scss';
 
