--- a/frontend/src/assets/css/inputs.css
+++ b/frontend/src/assets/css/inputs.css
@@ -1,5 +1,6 @@
 @import './variables.css';
 @import './buttons.css';
+@import './attributes.scss';
 
 /*
 *  MAIN PROPERTIES
@@ -851,44 +852,6 @@ input[type=checkbox]:disabled, input[type=radio]:disabled {
     flex: 0.05;
     justify-content: flex-end;
     pointer-events: initial;
-}
-
-/* Attributes */
-
-.attributes {
-    position: static;
-    padding-top: 4px;
-    display: block;
-    min-width: 5rem;
-    max-width: 10rem;
-
-    &::selection {
-        background-color: none;
-        color: inherit;
-    }
-}
-
-.attributes-in-table {
-    padding: .3rem;
-    padding-left: .5rem;
-
-     .tag {
-        padding: .25rem .3rem .15rem;
-        line-height: 1;
-        font-size: 0.8rem;
-    }
-}
-
-.attributes-dropdown {
-    user-select: none;
-    position: absolute;
-    z-index: 50;
-    margin-top:5px;
-    width: 450px;
-}
-
-.attributes-dropup {
-  bottom: 35px;
 }
 
 /* Others */
